refactor: change table_tag to form_tag

--- a/task1/index.html
+++ b/task1/index.html
@@ -35,38 +35,26 @@
       </section>
       <section class="login-cnt division flex-item">
         <h1 class="sub-title center italic">LOGIN</h1>
-        <table class="input-cnt">
-          <tr>
-            <td>
-              <input
-                id="user_id"
-                class="input-item italic bold"
-                type="text"
-                placeholder="ID"
-              />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input
-                id="user_pw"
-                class="input-item italic bold"
-                type="password"
-                placeholder="PW"
-              />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input
-                id="login_btn"
-                class="bold"
-                type="button"
-                value="로그인 후 지원하기"
-              />
-            </td>
-          </tr>
-        </table>
+        <form class="input-cnt" action="" method="post">
+          <input
+            id="user_id"
+            class="input-item italic bold"
+            type="text"
+            placeholder="ID"
+          />
+          <input
+            id="user_pw"
+            class="input-item italic bold"
+            type="password"
+            placeholder="PW"
+          />
+          <input
+            id="login_btn"
+            class="bold"
+            type="button"
+            value="로그인 후 지원하기"
+          />
+        </form>
       </section>
     </div>
   </body>
